--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "catalogo-libri",
   "version": "1.0.0",
   "description": "Catalogo libri",
-  "main": "index.js",
+  "main": "main/index.js",
   "scripts": {
     "build": "gulp build",
     "dev": "gulp dev",
@@ -28,10 +28,13 @@
     "chai": "^3.4.0",
     "chalk": "^1.1.1",
     "dev-ip": "^1.0.1",
+    "electron-connect": "^0.3.3",
+    "electron-prebuilt": "^0.34.1",
     "eslint": "^1.7.3",
     "eslint-html-reporter": "^0.4.14",
     "eslint-plugin-react": "^3.6.3",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
@@ -62,12 +65,14 @@
     "bootstrap": "^3.3.5",
     "bootstrap-material-design": "^0.3.0",
     "change-case": "^2.3.0",
+    "electron-rpc": "^1.0.3",
     "font-awesome": "^4.4.0",
     "fuse.js": "^1.2.2",
     "griddle-react": "^0.2.14",
     "halogen": "^0.1.10",
     "history": "^1.12.5",
     "mdi": "^1.2.65",
+    "nedb": "^1.2.1",
     "node-uuid": "^1.4.3",
     "ramda": "^0.18.0",
     "react": "^0.14.0",
