--- a/package.json
+++ b/package.json
@@ -68,25 +68,25 @@
     "electron-rpc": "^1.0.3",
     "font-awesome": "^4.4.0",
     "fuse.js": "^1.2.2",
-    "griddle-react": "^0.2.14",
     "halogen": "^0.1.10",
-    "history": "^1.12.5",
+    "history": "^1.13.0",
+    "lodash": "^3.10.1",
     "mdi": "^1.2.65",
     "nedb": "^1.2.1",
     "node-uuid": "^1.4.3",
     "ramda": "^0.18.0",
-    "react": "^0.14.0",
-    "react-bootstrap": "^0.27.2",
-    "react-dom": "^0.14.0",
+    "react": "^0.14.1",
+    "react-bootstrap": "^0.27.3",
+    "react-dom": "^0.14.1",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc3",
-    "react-select": "^0.8.2",
+    "react-select": "^0.9.0",
+    "reactabular": "^0.8.4",
     "redux": "^3.0.4",
-    "redux-form": "^3.0.0-beta-1",
+    "redux-form": "^3.0.0-beta-4",
     "redux-localstorage": "^0.4.0",
     "redux-logger": "^2.0.4",
     "redux-router": "^1.0.0-beta3",
-    "redux-thunk": "^1.0.0",
-    "underscore": "^1.8.3"
+    "redux-thunk": "^1.0.0"
   }
 }
