Added build process packaging step. Fixed error in fuzzyFilter.

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
         "comma-spacing": [2, {"before": false, "after": true}],
         "computed-property-spacing": [2, "never"],
         "indent": [2, 4],
+        "jsx-quotes": [2, "prefer-double"],
         "linebreak-style": [2, "unix"],
         "new-cap": [2, {"capIsNew": false}],
         "no-console": [0],
@@ -31,7 +32,6 @@
         "one-var": [2, "never"],
         "quotes": [2, "double"],
         "react/jsx-no-undef": [2],
-        "react/jsx-quotes": [2, "double"],
         "react/jsx-sort-prop-types": [2],
         "react/jsx-sort-props": [2],
         "react/jsx-uses-react": [2],
