--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "gulp build",
     "dev": "gulp dev",
-    "lint": "eslint app/**/*.js app/**/*.jsx",
-    "test": "NODE_PATH=app:test mocha --compilers jsx:babel/register test/unit/**/*unit*"
+    "lint": "gulp lint",
+    "package": "NODE_ENV=\"prod\" gulp package",
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/pscanf/catalogo-libri#readme",
   "devDependencies": {
+    "asar": "^0.8.2",
     "babel": "^5.8.29",
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.3",
