Added zoom support. Fixed style bugs.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "catalogo-libri",
+  "name": "books-catalogue",
   "version": "1.0.0",
   "description": "Catalogo libri",
   "main": "main/index.js",
